# Auralis

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_MCP.md  README_en.md  chat.html  index.html  message.txt  package-lock.json  package.json  pet.html  settings.html  start.bat  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
.resource/: README.md  cloud_models.json  models.json  sprites.json
agent/: .env.example  __init__.py  config.py  requirements.txt  server.py  test_app_plugin.py  test_audit_store.py  test_behavior.py  test_conversation_persist.py  test_dag_planner.py  test_event_store.py  test_file_plugin.py  test_integration.py  test_llm_integration.py  test_local_model.py  test_mcp.py  test_memory_system.py  test_persona.py  test_plugin_loader.py  test_policy.py  test_system_plugin.py  test_tool_router.py
agent/intent/: __init__.py  parser.py  schemas.py
agent/mcp/: __init__.py  plugin_loader.py  router.py  schema.py  validator.py
agent/memory/: audit_store.py  conversation_store.py  db.py  event_store.py  graph_store.py  (+2 more)
scripts/: agent.bat  build.bat  build.ps1  dev.bat  dev.ps1  inject-version.js  start-agent.ps1
src/: App.tsx  chat-main.tsx  main.tsx  pet-main.tsx  settings-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/os_adapter/: audit.rs  capability.rs  mod.rs  router.rs  safety.rs
src-tauri/src/os_adapter/windows/: app.rs  file.rs  mod.rs  system.rs  ui.rs
(+85 files in other folders)
