[package]
name = "auralis"
version = "1.0.0"
description = "Auralis Desktop Fairy OS Agent"
authors = ["Auralis Team"]
edition = "2021"

[lib]
name = "auralis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
trash = "4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
zip = "2"
open = "5"
sys-locale = "0.3"
once_cell = "1"
